plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.weave'
version = '0.0.1-SNAPSHOT'
description = 'weave-api'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-rsocket'
    implementation 'org.springframework.security:spring-security-rsocket'
    implementation 'org.springframework.security:spring-security-messaging'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    implementation "io.netty:netty-resolver-dns-native-macos:4.1.127.Final:osx-aarch_64"

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // Databases
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Logging & Monitoring
    implementation 'com.github.maricn:logback-slack-appender:1.6.1'
    implementation 'com.slack.api:slack-api-client:1.44.0'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'com.github.loki4j:loki-logback-appender:1.5.1'

    // JWT (JJWT 최신)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // springdoc-openapi
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

    implementation 'org.apache.commons:commons-lang3:3.19.0'
    implementation 'com.google.guava:guava:33.3.1-jre'

    // Retry
    implementation 'org.springframework.retry:spring-retry:2.0.7'

    // ShedLock for distributed scheduled tasks
    implementation 'net.javacrumbs.shedlock:shedlock-spring:5.15.1'
    implementation 'net.javacrumbs.shedlock:shedlock-provider-mongo:5.15.1'

    // Firebase Cloud Messaging
    implementation 'com.google.firebase:firebase-admin:9.7.0'

    // AWS SDK v2 for S3
    implementation(platform("software.amazon.awssdk:bom:2.27.21"))
    implementation("software.amazon.awssdk:s3")
}

tasks.named('test') {
    useJUnitPlatform()
}